tests/ui/union.stderr
error: Unions aren't supported.
 --> tests/ui/union.rs:2:1
  |
2 | union Test<T> {}
  | ^^^^^
