tests/ui/union.rs
#[derive_restricted::derive_where(Clone)]
union Test<T> {}

fn main() {}
